# synacor-challenge

./: Cargo.toml  README.md
src/: coins.rs  main.rs  print.rs
src/error/: empty_stack.rs  invalid_op_code.rs  invalid_register.rs  missing_required_argument.rs  mod.rs
src/lib/: lib.rs
src/lib/error/: empty_stack.rs  invalid_op_code.rs  invalid_register.rs  missing_required_argument.rs  mod.rs
